--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "vue": "^3.2.31",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.14",
     "vue-timers": "^2.0.4",
     "vuex": "^4.0.2"
