--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@vitejs/plugin-vue": "^2.2.4",
     "eslint": "^8.11.0",
     "eslint-plugin-vue": "^8.5.0",
-    "vite": "^2.8.6"
+    "vite": "^2.8.6",
+    "vite-plugin-pwa": "^0.12.0"
   },
   "name": "my-project",
   "scripts": {
